--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vercel/analytics": "^1.6.1",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
+    "dojah-kyc-sdk-react": "^0.0.5",
     "framer-motion": "^12.23.26",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.562.0",
